@@ -1,5 +1,12 @@
 2008-12-15  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-tab.c: Added minimize button to toolbar in fullscreen
+	mode, closes #558596.
+	* data/icons/hicolor_status_*view-minimize.png: New icons, by
+	Vinicius Depizzol.
+
+2008-12-15  Jonh Wendell <jwendell@gnome.org>
+
 	* configure.ac: post-release bump to 2.25.3
 
 ==================== 2.25.3 ======================
